k8s/arr/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: arr
spec:
  selector:
    app: jellyseerr
  ports:
  - port: 5055
    targetPort: 5055
  type: ClusterIP
