k8s/arr/jellyseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr-gateway
  namespace: arr
spec:
  parentRefs:
  - name: gateway-local-koryalbert
    namespace: gateway
    sectionName: local-koryalbert-net
  hostnames:
  - "jellyseerr.local.koryalbert.net"
  - "media.local.koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jellyseerr
      port: 5055
